Created page with "==Utilisation=="

--- a/wiki/fr/BIM_Setup.html
+++ b/wiki/fr/BIM_Setup.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Setup/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Setup&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Einrichten (78% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Einrichten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Setup.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Setup (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="Setup BIM (22% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--high" title="BIM: Konfiguracja &#347;rodowiska (78% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Konfiguracja &#347;rodowiska (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../ru/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -55,8 +55,9 @@
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>Le syst&egrave;me des pr&eacute;f&eacute;rences de FreeCAD, situ&eacute; sous le menu <b>&Eacute;dition &rarr; Pr&eacute;f&eacute;rences</b>, est tr&egrave;s complexe. La bo&icirc;te de dialogue <b>Configurer les BIM</b> en offre une version simplifi&eacute;e, en regroupant les param&egrave;tres les plus couramment utilis&eacute;s pour le travail des BIM dans un seul &eacute;cran simple. Toute modification apport&eacute;e ici a le m&ecirc;me effet que la modification du param&egrave;tre correspondant dans les pr&eacute;f&eacute;rences.
+</p><p><span id="Usage"></span>
 </p>
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
+<h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
 <ol><li>There are several ways to invoke the tool:
 <ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Setup.html" title="BIM Setup">BIM Setup</a></span> button.</li>
 <li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BIM Setup</b> option from the menu.</li></ul></li></ol>
@@ -113,33 +114,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101705
+Cached time: 20260116200643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.103 seconds
-Preprocessor visited node count: 409/1000000
+CPU time usage: 0.091 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 410/1000000
 Post&#8208;expand include size: 26457/2097152 bytes
 Template argument size: 10411/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1549/5000000 bytes
+Unstrip post&#8208;expand size: 1559/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.501      1 -total
- 42.23%   11.614      1 Template:Userdocnavi/fr
- 30.07%    8.269      1 Template:BIM_Tools_navi/fr
- 24.06%    6.618      2 Template:Navigation_menu_2
-  8.31%    2.284      2 Template:Docnav/fr
-  8.19%    2.252      1 Template:GuiCommand/fr
-  5.32%    1.462      2 Template:MenuCommand
-  4.02%    1.106      1 Template:Button
+100.00%   37.484      1 -total
+ 33.77%   12.658      1 Template:BIM_Tools_navi/fr
+ 24.20%    9.071      2 Template:Navigation_menu_2
+ 14.78%    5.539      1 Template:Userdocnavi/fr
+ 13.94%    5.227      2 Template:Docnav/fr
+ 12.63%    4.733      1 Template:GuiCommand/fr
+ 11.72%    4.393      2 Template:MenuCommand
+  9.99%    3.744      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:117090-0!canonical and timestamp 20260115101705 and revision id 1738637. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:117090-0!canonical and timestamp 20260116200643 and revision id 1739200. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
