--- a/wiki/fr/BIM_Setup.html
+++ b/wiki/fr/BIM_Setup.html
@@ -2,7 +2,7 @@
 <li><a href="../de/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Einrichten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Setup.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Setup (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="Setup BIM (22% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Konfiguracja &#347;rodowiska (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -58,9 +58,9 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<ol><li>There are several ways to invoke the tool:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Setup.html" title="BIM Setup">BIM Setup</a></span> button.</li>
-<li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BIM Setup</b> option from the menu.</li></ul></li></ol>
+<ol><li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Configurer les BIM</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>Gestion &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Configurer les BIM</b> du menu.</li></ul></li></ol>
 <p><span typeof="mw:File"><a href="../index.php?title=BIM_setup_screenshot.png&amp;filetimestamp=20200920040346&amp;.html" class="mw-file-description"><img src="../File/BIM_setup_screenshot.png" decoding="async" width="400" height="584" class="mw-file-element" data-file-width="523" data-file-height="764"></a></span>
 </p><p>En survolant chaque param&egrave;tre avec la souris, vous obtiendrez une infobulle expliquant son utilit&eacute; et l'emplacement du param&egrave;tre correspondant dans le syst&egrave;me g&eacute;n&eacute;ral des pr&eacute;f&eacute;rences de FreeCAD.
 </p><p><br>
@@ -114,33 +114,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116200643
+Cached time: 20260116200800
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.242 seconds
 Preprocessor visited node count: 410/1000000
-Post&#8208;expand include size: 26457/2097152 bytes
-Template argument size: 10411/2097152 bytes
+Post&#8208;expand include size: 26479/2097152 bytes
+Template argument size: 10433/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1559/5000000 bytes
+Unstrip post&#8208;expand size: 1563/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.484      1 -total
- 33.77%   12.658      1 Template:BIM_Tools_navi/fr
- 24.20%    9.071      2 Template:Navigation_menu_2
- 14.78%    5.539      1 Template:Userdocnavi/fr
- 13.94%    5.227      2 Template:Docnav/fr
- 12.63%    4.733      1 Template:GuiCommand/fr
- 11.72%    4.393      2 Template:MenuCommand
-  9.99%    3.744      1 Template:Button
+100.00%   53.087      1 -total
+ 38.04%   20.196      1 Template:BIM_Tools_navi/fr
+ 36.80%   19.538      2 Template:Navigation_menu_2
+ 20.11%   10.677      2 Template:Docnav/fr
+ 16.41%    8.709      1 Template:GuiCommand/fr
+ 16.01%    8.497      1 Template:Userdocnavi/fr
+  5.47%    2.905      2 Template:MenuCommand
+  2.77%    1.472      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:117090-0!canonical and timestamp 20260116200643 and revision id 1739200. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:117090-0!canonical and timestamp 20260116200800 and revision id 1739202. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
