--- a/wiki/fr/BIM_Workbench.html
+++ b/wiki/fr/BIM_Workbench.html
@@ -1,11 +1,11 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Workbench/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich BIM (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich BIM (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente de trabajo BIM (93% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../hr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM radni stol (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente BIM (68% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy BIM (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy BIM (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Bancada de trabalho BIM (17% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; BIM (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (2% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -182,7 +182,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_IfcQuantities.svg&amp;filetimestamp=20240608121549&amp;.html" class="mw-file-description"><img src="../File/BIM_IfcQuantities.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_IfcQuantities.html" title="BIM IfcQuantities/fr">Quantit&eacute;s IFC</a>&nbsp;: g&eacute;rer la fa&ccedil;on dont les quantit&eacute;s de vos objets sont explicitement export&eacute;es en IFC.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_IfcProperties.svg&amp;filetimestamp=20240608121538&amp;.html" class="mw-file-description"><img src="../File/BIM_IfcProperties.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_IfcProperties.html" title="BIM IfcProperties/fr">Propri&eacute;t&eacute;s IFC</a>&nbsp;: g&eacute;rer les propri&eacute;t&eacute;s IFC attach&eacute;es &agrave; chacun de vos objets.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Classification.svg&amp;filetimestamp=20240608121117&amp;.html" class="mw-file-description"><img src="../File/BIM_Classification.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Classification.html" title="BIM Classification/fr">Classification</a>&nbsp;: g&eacute;rer la fa&ccedil;on dont les objets et les mat&eacute;riaux de votre projet sont li&eacute;s &agrave; des syst&egrave;mes de classification tels que <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Uniclass">Uniclass</a>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">Calques</a>&nbsp;: g&eacute;rer les calques de votre document.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">Gestionnaire de calques</a>&nbsp;: g&eacute;rer les calques de votre document.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Material.html" title="BIM Material/fr">Mat&eacute;riau</a>&nbsp;: g&egrave;re les <a href="../fr/Arch_SetMaterial.html" title="Arch SetMaterial/fr">mat&eacute;riaux</a> ou les <a href="../fr/Arch_MultiMaterial.html" title="Arch MultiMaterial/fr">multi-mat&eacute;riaux</a> des objets s&eacute;lectionn&eacute;s.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="BIM_ReportTools">Report Tools:</span></li></ul>
@@ -363,34 +363,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115104513
+Cached time: 20260116200849
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.378 seconds
-Real time usage: 0.473 seconds
+CPU time usage: 0.387 seconds
+Real time usage: 0.598 seconds
 Preprocessor visited node count: 932/1000000
 Post&#8208;expand include size: 25628/2097152 bytes
 Template argument size: 10004/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2103/5000000 bytes
+Unstrip post&#8208;expand size: 2113/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.653      1 -total
- 47.97%   11.826      1 Template:BIM_Tools_navi/fr
- 39.06%    9.629      2 Template:Navigation_menu_2
- 14.22%    3.505      1 Template:Userdocnavi/fr
- 10.11%    2.494      2 Template:Docnav/fr
-  6.57%    1.619      7 Template:VersionPlus/fr
-  5.25%    1.295      1 Template:MenuCommand
-  4.85%    1.196      1 Template:Version
-  4.79%    1.181      1 Template:TOCright
+100.00%   19.593      1 -total
+ 39.54%    7.747      1 Template:BIM_Tools_navi/fr
+ 35.25%    6.906      2 Template:Navigation_menu_2
+ 16.14%    3.162      1 Template:Userdocnavi/fr
+ 11.46%    2.246      7 Template:VersionPlus/fr
+ 10.93%    2.142      2 Template:Docnav/fr
+  5.65%    1.108      1 Template:TOCright
+  5.43%    1.064      1 Template:MenuCommand
+  5.33%    1.045      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138696-0!canonical and timestamp 20260115104513 and revision id 1738673. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138696-0!canonical and timestamp 20260116200849 and revision id 1739204. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
