Updated page Native IFC/fr

--- a/wiki/fr/Native_IFC.html
+++ b/wiki/fr/Native_IFC.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Native IFC/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Native+IFC&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Native_IFC.html" class="mw-pt-progress mw-pt-progress--med" title="Natives IFC (68% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Native_IFC.html" class="mw-pt-progress mw-pt-progress--complete" title="Natives IFC (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Native_IFC.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Native IFC (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../pl/Native_IFC.html" class="mw-pt-progress mw-pt-progress--high" title="Natywne IFC (93% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Native_IFC.html" class="mw-pt-progress mw-pt-progress--complete" title="Natywne IFC (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Native_IFC.html" class="mw-pt-progress mw-pt-progress--med" title="IFCNativo (26% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/Native_IFC.html" class="mw-pt-progress mw-pt-progress--low" title="Native IFC (&#1042;&#1089;&#1090;&#1088;&#1086;&#1077;&#1085;&#1085;&#1099;&#1081; &#1054;&#1041;&#1050;) (3% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -99,7 +99,7 @@
 </p><p><span id="Layers_and_Materials"></span>
 </p>
 <h2><span id="Calques_et_mat.C3.A9riaux"></span><span class="mw-headline" id="Calques_et_mat&eacute;riaux">Calques et mat&eacute;riaux</span></h2>
-<p>Les <b>calques</b> sont charg&eacute;s lorsqu'on double-clique sur un objet. Les calques sont repr&eacute;sent&eacute;s comme des <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">calques normaux de FreeCAD</a> mais ils sont h&eacute;berg&eacute;s dans le projet IFC. Lors de l'utilisation de l'outil <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">BIM Calque</a>, une ic&ocirc;ne suppl&eacute;mentaire indique si le calque fait partie d'un projet IFC ou non.
+<p>Les <b>calques</b> sont charg&eacute;s lorsqu'on double-clique sur un objet. Les calques sont repr&eacute;sent&eacute;s comme des <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">calques normaux de FreeCAD</a> mais ils sont h&eacute;berg&eacute;s dans le projet IFC. Lors de l'utilisation de l'outil <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">BIM Gestionnaire de calques</a>, une ic&ocirc;ne suppl&eacute;mentaire indique si le calque fait partie d'un projet IFC ou non.
 </p><p>Les <b>mat&eacute;riaux</b> suivent la m&ecirc;me logique. Ils ne sont charg&eacute;s qu'en double-cliquant sur l'objet, ils sont repr&eacute;sent&eacute;s comme des <a href="../index.php?title=Arch_Material/fr&amp;action=edit&amp;redlink=1.html" class="new" title="Arch Material/fr (page does not exist)">mat&eacute;riaux</a> normaux mais sont h&eacute;berg&eacute;s dans le projet IFC.
 </p><p><span id="Building_structure"></span>
 </p>
@@ -170,38 +170,38 @@
 <li><b>Bases&nbsp;:</b> <a href="../fr/About_FreeCAD.html" title="About FreeCAD/fr">&Agrave; propos de FreeCAD</a>, <a href="../fr/Interface.html" title="Interface/fr">Interface</a>, <a href="../fr/Mouse_navigation.html" title="Mouse navigation/fr">Navigation par la souris</a>, <a href="../fr/Selection_methods.html" title="Selection methods/fr">M&eacute;thodes de s&eacute;lection</a>, <a href="../fr/Object_name.html" title="Object name/fr">Objet name</a>, <a href="../fr/Preferences_Editor.html" title="Preferences Editor/fr">Pr&eacute;f&eacute;rences</a>, <a href="../fr/Workbenches.html" title="Workbenches/fr">Ateliers</a>, <a href="../fr/Document_structure.html" title="Document structure/fr">Structure du document</a>, <a href="../fr/Property.html" title="Property/fr">Propri&eacute;t&eacute;s</a>, <a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">Contribuer &agrave; FreeCAD</a>, <a href="../fr/Donate.html" title="Donate/fr">Faire un don</a></li></ul>
 <hr>
 <ul><li><b>Aide&nbsp;:</b> <a href="../fr/Tutorials.html" title="Tutorials/fr">Tutoriels</a>, <a href="../fr/Video_tutorials.html" title="Video tutorials/fr">Tutoriels vid&eacute;o</a></li>
-<li><b><a href="../fr/Workbenches.html" title="Workbenches/fr">Ateliers</a>&nbsp;:</b> <a href="../fr/Std_Base.html" title="Std Base/fr">Std Base</a>, <a href="../fr/Arch_Workbench.html" title="Arch Workbench/fr">Arch</a>, <a href="../fr/Assembly_Workbench.html" title="Assembly Workbench/fr">Assembly</a>, <a href="../fr/CAM_Workbench.html" title="CAM Workbench/fr">CAM</a>, <a href="../fr/Draft_Workbench.html" title="Draft Workbench/fr">Draft</a>, <a href="../fr/FEM_Workbench.html" title="FEM Workbench/fr">FEM</a>, <a href="../fr/Inspection_Workbench.html" title="Inspection Workbench/fr">Inspection</a>, <a href="../fr/Mesh_Workbench.html" title="Mesh Workbench/fr">Mesh</a>, <a href="../fr/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/fr">OpenSCAD</a>, <a href="../fr/Part_Workbench.html" title="Part Workbench/fr">Part</a>, <a href="../fr/PartDesign_Workbench.html" title="PartDesign Workbench/fr">PartDesign</a>, <a href="../fr/Points_Workbench.html" title="Points Workbench/fr">Points</a>, <a href="../fr/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/fr">Reverse Engineering</a>, <a href="../fr/Robot_Workbench.html" title="Robot Workbench/fr">Robot</a>, <a href="../fr/Sketcher_Workbench.html" title="Sketcher Workbench/fr">Sketcher</a>, <a href="../fr/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/fr">Spreadsheet</a>, <a href="../fr/Surface_Workbench.html" title="Surface Workbench/fr">Surface</a>, <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>, <a href="../fr/Testing.html" title="Testing/fr">Test</a></li></ul>
+<li><b><a href="../fr/Workbenches.html" title="Workbenches/fr">Ateliers</a>&nbsp;:</b> <a href="../fr/Std_Base.html" title="Std Base/fr">Std Base</a>, <a href="../fr/Assembly_Workbench.html" title="Assembly Workbench/fr">Assembly</a>, <a href="../fr/BIM_Workbench.html" title="BIM Workbench/fr">BIM</a>, <a href="../fr/CAM_Workbench.html" title="CAM Workbench/fr">CAM</a>, <a href="../fr/Draft_Workbench.html" title="Draft Workbench/fr">Draft</a>, <a href="../fr/FEM_Workbench.html" title="FEM Workbench/fr">FEM</a>, <a href="../fr/Inspection_Workbench.html" title="Inspection Workbench/fr">Inspection</a>, <a href="../fr/Material_Workbench.html" title="Material Workbench/fr">Material</a>, <a href="../fr/Mesh_Workbench.html" title="Mesh Workbench/fr">Mesh</a>, <a href="../fr/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/fr">OpenSCAD</a>, <a href="../fr/Part_Workbench.html" title="Part Workbench/fr">Part</a>, <a href="../fr/PartDesign_Workbench.html" title="PartDesign Workbench/fr">PartDesign</a>, <a href="../fr/Points_Workbench.html" title="Points Workbench/fr">Points</a>, <a href="../fr/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/fr">Reverse Engineering</a>, <a href="../fr/Robot_Workbench.html" title="Robot Workbench/fr">Robot</a>, <a href="../fr/Sketcher_Workbench.html" title="Sketcher Workbench/fr">Sketcher</a>, <a href="../fr/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/fr">Spreadsheet</a>, <a href="../fr/Surface_Workbench.html" title="Surface Workbench/fr">Surface</a>, <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>, <a href="../fr/Testing.html" title="Testing/fr">Test</a></li></ul>
 <hr>
-<ul><li><b><a href="../fr/Addon.html" title="Addon/fr">Addons</a>&nbsp;:</b> <a href="../fr/Std_AddonMgr.html" title="Std AddonMgr/fr">Gestionnaire d'Addons</a>, <a href="../fr/External_workbenches.html" title="External workbenches/fr">Ateliers externes</a>, <a href="../fr/Scripting_and_macros.html" title="Scripting and macros/fr">Scripts et macros</a></li></ul>
+<ul><li><b><a href="../fr/Addon.html" title="Addon/fr">Addons</a>&nbsp;:</b> <a href="../fr/Std_AddonMgr.html" title="Std AddonMgr/fr">Gestionnaire des extensions</a>, <a href="../fr/External_workbenches.html" title="External workbenches/fr">Ateliers externes</a>, <a href="../fr/Scripting_and_macros.html" title="Scripting and macros/fr">Scripts et macros</a></li></ul>
 <hr>
 <ul><li><b>Hubs&nbsp;:</b> <a href="../fr/User_hub.html" title="User hub/fr">Hub utilisateurs</a>, <a href="../fr/Power_users_hub.html" title="Power users hub/fr">Hub utilisateurs exp&eacute;riment&eacute;s</a>, <a href="../fr/Developer_hub.html" title="Developer hub/fr">Hub D&eacute;veloppeurs</a></li></ul></div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251115130750
+Cached time: 20260116200915
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.102 seconds
-Preprocessor visited node count: 361/1000000
-Post&#8208;expand include size: 24194/2097152 bytes
-Template argument size: 9884/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.104 seconds
+Preprocessor visited node count: 412/1000000
+Post&#8208;expand include size: 24427/2097152 bytes
+Template argument size: 9924/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1298/5000000 bytes
+Unstrip post&#8208;expand size: 1309/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.202      1 -total
- 54.10%    9.306      1 Template:BIM_Tools_navi/fr
- 36.38%    6.258      2 Template:Navigation_menu_2
- 22.79%    3.920      1 Template:Userdocnavi/fr
- 20.43%    3.514      2 Template:Docnav/fr
+100.00%   14.500      1 -total
+ 56.74%    8.228      1 Template:BIM_Tools_navi/fr
+ 43.63%    6.327      2 Template:Navigation_menu_2
+ 21.23%    3.078      1 Template:Userdocnavi/fr
+ 18.03%    2.614      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353105-0!canonical and timestamp 20251115130749 and revision id 1691599. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353105-0!canonical and timestamp 20260116200915 and revision id 1739206. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
