Created page with "* <span id="BIM_ReportTools">Outils de rapport :</span><!--Do not edit span id: the BIM_ReportTools pages redirect here-->"

--- a/wiki/fr/BIM_Workbench.html
+++ b/wiki/fr/BIM_Workbench.html
@@ -184,9 +184,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Classification.svg&amp;filetimestamp=20240608121117&amp;.html" class="mw-file-description"><img src="../File/BIM_Classification.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Classification.html" title="BIM Classification/fr">Classification</a>&nbsp;: g&eacute;rer la fa&ccedil;on dont les objets et les mat&eacute;riaux de votre projet sont li&eacute;s &agrave; des syst&egrave;mes de classification tels que <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Uniclass">Uniclass</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">Gestionnaire de calques</a>&nbsp;: g&eacute;rer les calques de votre document.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Material.html" title="BIM Material/fr">Mat&eacute;riau</a>&nbsp;: g&egrave;re les <a href="../fr/Arch_SetMaterial.html" title="Arch SetMaterial/fr">mat&eacute;riaux</a> ou les <a href="../fr/Arch_MultiMaterial.html" title="Arch MultiMaterial/fr">multi-mat&eacute;riaux</a> des objets s&eacute;lectionn&eacute;s.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="BIM_ReportTools">Report Tools:</span></li></ul>
-</div>
+<ul><li><span id="BIM_ReportTools">Outils de rapport&nbsp;:</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Report.html" title="BIM Report">BIM Report</a>: Creates a new BIM Report to query model data with SQL. <span style="font-size:small;"><a href="../Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span></li></ul></dd></dl>
 </div>
@@ -363,13 +361,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116200849
+Cached time: 20260116201254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.387 seconds
-Real time usage: 0.598 seconds
-Preprocessor visited node count: 932/1000000
+CPU time usage: 0.416 seconds
+Real time usage: 0.800 seconds
+Preprocessor visited node count: 931/1000000
 Post&#8208;expand include size: 25628/2097152 bytes
 Template argument size: 10004/2097152 bytes
 Highest expansion depth: 5/100
@@ -379,18 +377,18 @@ Unstrip post&#8208;expand size: 2113/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.593      1 -total
- 39.54%    7.747      1 Template:BIM_Tools_navi/fr
- 35.25%    6.906      2 Template:Navigation_menu_2
- 16.14%    3.162      1 Template:Userdocnavi/fr
- 11.46%    2.246      7 Template:VersionPlus/fr
- 10.93%    2.142      2 Template:Docnav/fr
-  5.65%    1.108      1 Template:TOCright
-  5.43%    1.064      1 Template:MenuCommand
-  5.33%    1.045      1 Template:Version
+100.00%   21.149      1 -total
+ 30.27%    6.402      1 Template:BIM_Tools_navi/fr
+ 26.66%    5.639      2 Template:Navigation_menu_2
+ 16.97%    3.589      2 Template:Docnav/fr
+ 12.15%    2.569      1 Template:Userdocnavi/fr
+ 11.06%    2.339      7 Template:VersionPlus/fr
+  8.11%    1.715      1 Template:Version
+  7.36%    1.556      1 Template:TOCright
+  6.68%    1.413      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138696-0!canonical and timestamp 20260116200849 and revision id 1739204. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138696-0!canonical and timestamp 20260116201254 and revision id 1739208. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
