Created page with ":* [[Image:BIM_Report.svg|32px]] [[BIM_Report/fr|Rapport]] : crée un nouveau rapport BIM pour interroger les données du modèle avec SQL. {{Version/fr|1.2}}"

--- a/wiki/fr/BIM_Workbench.html
+++ b/wiki/fr/BIM_Workbench.html
@@ -2,7 +2,7 @@
 <li><a href="../de/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich BIM (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente de trabajo BIM (93% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../hr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM radni stol (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente BIM (68% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy BIM (100% translated)" lang="pl" dir="ltr">polski</a></li>
@@ -185,9 +185,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">Gestionnaire de calques</a>&nbsp;: g&eacute;rer les calques de votre document.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Material.html" title="BIM Material/fr">Mat&eacute;riau</a>&nbsp;: g&egrave;re les <a href="../fr/Arch_SetMaterial.html" title="Arch SetMaterial/fr">mat&eacute;riaux</a> ou les <a href="../fr/Arch_MultiMaterial.html" title="Arch MultiMaterial/fr">multi-mat&eacute;riaux</a> des objets s&eacute;lectionn&eacute;s.</li></ul>
 <ul><li><span id="BIM_ReportTools">Outils de rapport&nbsp;:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Report.html" title="BIM Report">BIM Report</a>: Creates a new BIM Report to query model data with SQL. <span style="font-size:small;"><a href="../Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span></li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Report/fr&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/fr (page does not exist)">Rapport</a>&nbsp;: cr&eacute;e un nouveau rapport BIM pour interroger les donn&eacute;es du mod&egrave;le avec SQL. <span style="font-size:small;"><a href="../index.php?title=Release_notes_1.2/fr&amp;action=edit&amp;redlink=1.html" class="new" title="Release notes 1.2/fr (page does not exist)">introduit dans la version 1.2</a></span></li></ul></dd></dl>
 <div class="mw-translate-fuzzy">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Arch_Schedule.html" title="Arch Schedule/fr">Nomenclature</a>&nbsp;: cr&eacute;e diff&eacute;rents types de nomenclatures.</li></ul>
 </div>
@@ -361,34 +359,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201254
+Cached time: 20260116201326
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.416 seconds
-Real time usage: 0.800 seconds
-Preprocessor visited node count: 931/1000000
-Post&#8208;expand include size: 25628/2097152 bytes
+CPU time usage: 0.451 seconds
+Real time usage: 0.660 seconds
+Preprocessor visited node count: 930/1000000
+Post&#8208;expand include size: 25643/2097152 bytes
 Template argument size: 10004/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2113/5000000 bytes
+Unstrip post&#8208;expand size: 2117/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.149      1 -total
- 30.27%    6.402      1 Template:BIM_Tools_navi/fr
- 26.66%    5.639      2 Template:Navigation_menu_2
- 16.97%    3.589      2 Template:Docnav/fr
- 12.15%    2.569      1 Template:Userdocnavi/fr
- 11.06%    2.339      7 Template:VersionPlus/fr
-  8.11%    1.715      1 Template:Version
-  7.36%    1.556      1 Template:TOCright
-  6.68%    1.413      1 Template:MenuCommand
+100.00%   35.489      1 -total
+ 40.06%   14.218      1 Template:BIM_Tools_navi/fr
+ 28.86%   10.244      2 Template:Navigation_menu_2
+ 12.35%    4.383      1 Template:Userdocnavi/fr
+ 11.37%    4.036      2 Template:Docnav/fr
+  9.97%    3.537      7 Template:VersionPlus/fr
+  6.80%    2.414      1 Template:Version/fr
+  6.09%    2.162      1 Template:TOCright
+  5.55%    1.968      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138696-0!canonical and timestamp 20260116201254 and revision id 1739208. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138696-0!canonical and timestamp 20260116201325 and revision id 1739210. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
