--- a/wiki/fr/BIM_Workbench.html
+++ b/wiki/fr/BIM_Workbench.html
@@ -186,9 +186,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Material.html" title="BIM Material/fr">Mat&eacute;riau</a>&nbsp;: g&egrave;re les <a href="../fr/Arch_SetMaterial.html" title="Arch SetMaterial/fr">mat&eacute;riaux</a> ou les <a href="../fr/Arch_MultiMaterial.html" title="Arch MultiMaterial/fr">multi-mat&eacute;riaux</a> des objets s&eacute;lectionn&eacute;s.</li></ul>
 <ul><li><span id="BIM_ReportTools">Outils de rapport&nbsp;:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Report/fr&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/fr (page does not exist)">Rapport</a>&nbsp;: cr&eacute;e un nouveau rapport BIM pour interroger les donn&eacute;es du mod&egrave;le avec SQL. <span style="font-size:small;"><a href="../index.php?title=Release_notes_1.2/fr&amp;action=edit&amp;redlink=1.html" class="new" title="Release notes 1.2/fr (page does not exist)">introduit dans la version 1.2</a></span></li></ul></dd></dl>
-<div class="mw-translate-fuzzy">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Arch_Schedule.html" title="Arch Schedule/fr">Nomenclature</a>&nbsp;: cr&eacute;e diff&eacute;rents types de nomenclatures.</li></ul>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Arch_Schedule.html" title="Arch Schedule/fr">Nomenclature</a>&nbsp;: cr&eacute;e diff&eacute;rents types de nomenclatures.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Preflight.svg&amp;filetimestamp=20240608121802&amp;.html" class="mw-file-description"><img src="../File/BIM_Preflight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Preflight.html" title="BIM Preflight/fr">Contr&ocirc;le en amont</a>&nbsp;: effectuer diff&eacute;rents contr&ocirc;les sur votre mod&egrave;le avant de l'exporter en IFC.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Draft_AnnotationStyleEditor.svg&amp;filetimestamp=20200513071606&amp;.html" class="mw-file-description"><img src="../File/Draft_AnnotationStyleEditor.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Draft_AnnotationStyleEditor.html" title="Draft AnnotationStyleEditor/fr">&Eacute;diter le style des annotations</a>&nbsp;: permet de d&eacute;finir des styles qui affectent les propri&eacute;t&eacute;s visuelles des objets de type annotation.</li></ul>
 <p><span id="Utils"></span>
@@ -359,13 +357,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201326
+Cached time: 20260116201337
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.451 seconds
-Real time usage: 0.660 seconds
-Preprocessor visited node count: 930/1000000
+CPU time usage: 0.403 seconds
+Real time usage: 0.565 seconds
+Preprocessor visited node count: 929/1000000
 Post&#8208;expand include size: 25643/2097152 bytes
 Template argument size: 10004/2097152 bytes
 Highest expansion depth: 5/100
@@ -375,18 +373,18 @@ Unstrip post&#8208;expand size: 2117/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.489      1 -total
- 40.06%   14.218      1 Template:BIM_Tools_navi/fr
- 28.86%   10.244      2 Template:Navigation_menu_2
- 12.35%    4.383      1 Template:Userdocnavi/fr
- 11.37%    4.036      2 Template:Docnav/fr
-  9.97%    3.537      7 Template:VersionPlus/fr
-  6.80%    2.414      1 Template:Version/fr
-  6.09%    2.162      1 Template:TOCright
-  5.55%    1.968      1 Template:MenuCommand
+100.00%   27.334      1 -total
+ 32.00%    8.747      1 Template:BIM_Tools_navi/fr
+ 28.85%    7.886      1 Template:Userdocnavi/fr
+ 23.50%    6.423      2 Template:Navigation_menu_2
+ 10.66%    2.914      2 Template:Docnav/fr
+  8.67%    2.369      7 Template:VersionPlus/fr
+  6.19%    1.691      1 Template:Version/fr
+  5.45%    1.490      1 Template:MenuCommand
+  3.78%    1.033      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138696-0!canonical and timestamp 20260116201325 and revision id 1739210. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138696-0!canonical and timestamp 20260116201336 and revision id 1739212. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
