--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -2,9 +2,7 @@
 <li><a href="../de/Release_notes_1.2.html" class="mw-pt-progress mw-pt-progress--complete" title="Versionshinweise 1.2 (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<div class="warning-box">FreeCAD 1.2 is under development, there is no expected released date yet.</div>
-</div>
+<div class="warning-box">FreeCAD 1.2 est en cours de d&eacute;veloppement, il n'y a pas encore de date de sortie pr&eacute;vue.</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
 <p>Are features missing? Mention them in the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a> forum thread.<br>
@@ -206,15 +204,15 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201417
+Cached time: 20260116201424
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.137 seconds
-Preprocessor visited node count: 259/1000000
-Post&#8208;expand include size: 1360/2097152 bytes
-Template argument size: 454/2097152 bytes
+CPU time usage: 0.050 seconds
+Real time usage: 0.069 seconds
+Preprocessor visited node count: 258/1000000
+Post&#8208;expand include size: 1377/2097152 bytes
+Template argument size: 471/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -222,14 +220,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.205      1 -total
- 51.55%    6.292      2 Template:Message
- 21.93%    2.676      1 Template:VeryImportantMessage
- 21.73%    2.652      1 Template:FileName
- 21.12%    2.578      1 Template:TOCright
+100.00%    5.955      1 -total
+ 38.76%    2.308      2 Template:Message
+ 31.12%    1.853      1 Template:VeryImportantMessage
+ 25.56%    1.522      1 Template:TOCright
+ 17.78%    1.059      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201416 and revision id 1739214. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201424 and revision id 1739216. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
