--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -3,12 +3,10 @@
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 est en cours de d&eacute;veloppement, il n'y a pas encore de date de sortie pr&eacute;vue.</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
-<p>Are features missing? Mention them in the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a> forum thread.<br>
-See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways to contribute to FreeCAD.
+<p>Il manque des fonctions&nbsp;? Signalez-les dans le fil de discussion du forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a>.<br>
+Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de FreeCAD</a> pour savoir comment contribuer &agrave; FreeCAD.
 </p>
-</div>
 </div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">All images on this page must use the <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span> suffix</div>
@@ -204,15 +202,15 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201424
+Cached time: 20260116201558
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.069 seconds
-Preprocessor visited node count: 258/1000000
-Post&#8208;expand include size: 1377/2097152 bytes
-Template argument size: 471/2097152 bytes
+CPU time usage: 0.055 seconds
+Real time usage: 0.082 seconds
+Preprocessor visited node count: 257/1000000
+Post&#8208;expand include size: 1418/2097152 bytes
+Template argument size: 512/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -220,14 +218,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.955      1 -total
- 38.76%    2.308      2 Template:Message
- 31.12%    1.853      1 Template:VeryImportantMessage
- 25.56%    1.522      1 Template:TOCright
- 17.78%    1.059      1 Template:FileName
+100.00%    9.519      1 -total
+ 52.61%    5.008      2 Template:Message
+ 23.78%    2.264      1 Template:FileName
+ 23.17%    2.205      1 Template:TOCright
+ 20.16%    1.919      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201424 and revision id 1739216. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201558 and revision id 1739218. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
