--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -8,9 +8,7 @@
 Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de FreeCAD</a> pour savoir comment contribuer &agrave; FreeCAD.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">All images on this page must use the <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span> suffix</div>
-</div>
+<div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Toutes les images de cette page doivent utiliser le suffixe <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>FreeCAD 1.2</b> was released on <b>D Month Year</b>, get it from the <a href="../Download.html" title="Download">Download</a> page. This page lists all new features and changes.
@@ -202,15 +200,15 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201558
+Cached time: 20260116201624
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.055 seconds
-Real time usage: 0.082 seconds
-Preprocessor visited node count: 257/1000000
-Post&#8208;expand include size: 1418/2097152 bytes
-Template argument size: 512/2097152 bytes
+CPU time usage: 0.050 seconds
+Real time usage: 0.071 seconds
+Preprocessor visited node count: 256/1000000
+Post&#8208;expand include size: 1434/2097152 bytes
+Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -218,14 +216,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.519      1 -total
- 52.61%    5.008      2 Template:Message
- 23.78%    2.264      1 Template:FileName
- 23.17%    2.205      1 Template:TOCright
- 20.16%    1.919      1 Template:VeryImportantMessage
+100.00%    4.724      1 -total
+ 47.27%    2.233      2 Template:Message
+ 25.06%    1.184      1 Template:VeryImportantMessage
+ 21.91%    1.035      1 Template:FileName
+ 21.23%    1.003      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201558 and revision id 1739218. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201624 and revision id 1739220. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
