--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -10,10 +10,8 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Toutes les images de cette page doivent utiliser le suffixe <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>FreeCAD 1.2</b> was released on <b>D Month Year</b>, get it from the <a href="../Download.html" title="Download">Download</a> page. This page lists all new features and changes.
+<p><b>FreeCAD 1.2</b> a &eacute;t&eacute; publi&eacute; le <b>JJ MM AA</b>, t&eacute;l&eacute;chargez la depuis la page <a href="../fr/Download.html" title="Download/fr">T&eacute;l&eacute;chargement</a>. Cette page liste toutes les nouvelles fonctions et les changements.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Previous FreeCAD release notes can be found in the <a href="../Feature_list.html#Release_notes" title="Feature list">Feature list</a>.
 </p>
@@ -200,13 +198,13 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201624
+Cached time: 20260116201637
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.071 seconds
-Preprocessor visited node count: 256/1000000
+CPU time usage: 0.059 seconds
+Real time usage: 0.083 seconds
+Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
@@ -216,14 +214,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.724      1 -total
- 47.27%    2.233      2 Template:Message
- 25.06%    1.184      1 Template:VeryImportantMessage
- 21.91%    1.035      1 Template:FileName
- 21.23%    1.003      1 Template:TOCright
+100.00%    7.542      1 -total
+ 51.43%    3.879      2 Template:Message
+ 27.65%    2.085      1 Template:VeryImportantMessage
+ 18.46%    1.392      1 Template:FileName
+ 16.45%    1.241      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201624 and revision id 1739220. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201637 and revision id 1739222. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
