Created page with "Les notes de versions plus anciennes de FreeCAD sont disponibles dans la [[Feature_list/fr#Notes_de_versions|liste des notes de versions]]."

--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -11,18 +11,11 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Toutes les images de cette page doivent utiliser le suffixe <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><b>FreeCAD 1.2</b> a &eacute;t&eacute; publi&eacute; le <b>JJ MM AA</b>, t&eacute;l&eacute;chargez la depuis la page <a href="../fr/Download.html" title="Download/fr">T&eacute;l&eacute;chargement</a>. Cette page liste toutes les nouvelles fonctions et les changements.
+</p><p>Les notes de versions plus anciennes de FreeCAD sont disponibles dans la <a href="../fr/Feature_list.html#Notes_de_versions" title="Feature list/fr">liste des notes de versions</a>.
+</p><p>L'endroit pour une image &eacute;vocatrice s&eacute;lectionn&eacute;e par les administrateurs sur le <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">forum des mod&egrave;les des utilisateurs</a>.
+</p><p><span id="General"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Previous FreeCAD release notes can be found in the <a href="../Feature_list.html#Release_notes" title="Feature list">Feature list</a>.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Placeholder for an eye-catching image selected by the admins from the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">user showcases forum</a>.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="General">General</span></h2>
-</div>
+<h2><span id="G.C3.A9n.C3.A9ral"></span><span class="mw-headline" id="G&eacute;n&eacute;ral">G&eacute;n&eacute;ral</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="User_interface">User interface</span></h2>
 </div>
@@ -198,13 +191,13 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201637
+Cached time: 20260116201709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.059 seconds
-Real time usage: 0.083 seconds
-Preprocessor visited node count: 255/1000000
+CPU time usage: 0.045 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 253/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
@@ -214,14 +207,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.542      1 -total
- 51.43%    3.879      2 Template:Message
- 27.65%    2.085      1 Template:VeryImportantMessage
- 18.46%    1.392      1 Template:FileName
- 16.45%    1.241      1 Template:TOCright
+100.00%    5.094      1 -total
+ 47.21%    2.405      2 Template:Message
+ 27.80%    1.416      1 Template:VeryImportantMessage
+ 22.95%    1.169      1 Template:FileName
+ 20.51%    1.045      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201637 and revision id 1739222. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201709 and revision id 1739228. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
