--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.2&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Release_notes_1.2.html" class="mw-pt-progress mw-pt-progress--complete" title="Versionshinweise 1.2 (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 est en cours de d&eacute;veloppement, il n'y a pas encore de date de sortie pr&eacute;vue.</div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
 <p>Il manque des fonctions&nbsp;? Signalez-les dans le fil de discussion du forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a>.<br>
@@ -16,9 +16,9 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </p><p><span id="General"></span>
 </p>
 <h2><span id="G.C3.A9n.C3.A9ral"></span><span class="mw-headline" id="G&eacute;n&eacute;ral">G&eacute;n&eacute;ral</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="User_interface">User interface</span></h2>
-</div>
+<p><span id="User_interface"></span>
+</p>
+<h2><span class="mw-headline" id="Interface_utilisateur">Interface utilisateur</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_user_interface_improvements">Further user interface improvements</span></h3>
 </div>
@@ -191,12 +191,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201709
+Cached time: 20260116201711
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.057 seconds
+CPU time usage: 0.046 seconds
+Real time usage: 0.059 seconds
 Preprocessor visited node count: 253/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -207,14 +207,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.094      1 -total
- 47.21%    2.405      2 Template:Message
- 27.80%    1.416      1 Template:VeryImportantMessage
- 22.95%    1.169      1 Template:FileName
- 20.51%    1.045      1 Template:TOCright
+100.00%    7.297      1 -total
+ 47.32%    3.453      2 Template:Message
+ 27.15%    1.981      1 Template:VeryImportantMessage
+ 23.69%    1.729      1 Template:FileName
+ 21.91%    1.599      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201709 and revision id 1739228. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201711 and revision id 1739230. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
