Created page with "{| cellpadding=5 | [[File:AnnotationLabel_relnotes_1.2.png|384px]] | Une commande permettant d'ajouter une étiquette d'annotation au dernier point sélectionné dans la vue 3D a été ajoutée. [https://github.com/FreeCAD/FreeCAD/pull/23673 Pull request #23673] |}"

--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -28,16 +28,14 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Core"></span>
 </p>
 <h3><span class="mw-headline" id="Noyau">Noyau</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table cellpadding="5">
 <tbody><tr>
 <td><span typeof="mw:File"><a href="../index.php?title=AnnotationLabel_relnotes_1.2.png&amp;filetimestamp=20251125144303&amp;.html" class="mw-file-description"><img src="../File/AnnotationLabel_relnotes_1.2.png" decoding="async" width="384" height="212" class="mw-file-element" data-file-width="1323" data-file-height="731"></a></span>
 </td>
-<td>A command to add an Annotation Label to the last picked point in the 3D view was added.
+<td>Une commande permettant d'ajouter une &eacute;tiquette d'annotation au dernier point s&eacute;lectionn&eacute; dans la vue 3D a &eacute;t&eacute; ajout&eacute;e.
 <p><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/23673">Pull request #23673</a>
 </p>
 </td></tr></tbody></table>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Further_Core_improvements">Further Core improvements</span></h4>
 </div>
@@ -191,13 +189,13 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201720
+Cached time: 20260116201745
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.075 seconds
-Preprocessor visited node count: 253/1000000
+CPU time usage: 0.048 seconds
+Real time usage: 0.063 seconds
+Preprocessor visited node count: 252/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
@@ -207,14 +205,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.005      1 -total
- 57.62%    6.341      2 Template:Message
- 37.25%    4.099      1 Template:FileName
- 21.94%    2.414      1 Template:VeryImportantMessage
- 17.63%    1.940      1 Template:TOCright
+100.00%    5.668      1 -total
+ 48.29%    2.737      2 Template:Message
+ 29.08%    1.648      1 Template:VeryImportantMessage
+ 19.60%    1.111      1 Template:FileName
+ 18.66%    1.058      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201720 and revision id 1739236. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201745 and revision id 1739238. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
