Created page with "==== API en Python modifiées ===="

--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -45,15 +45,13 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Removed_Python_API"></span>
 </p>
 <h4><span id="Suppression_d.27API_Python"></span><span class="mw-headline" id="Suppression_d'API_Python">Suppression d'API Python</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Changed_Python_API">Changed Python API</span></h4>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="New_Python_API">New Python API</span></h4>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<p><span id="Changed_Python_API"></span>
+</p>
+<h4><span id="API_en_Python_modifi.C3.A9es"></span><span class="mw-headline" id="API_en_Python_modifi&eacute;es">API en Python modifi&eacute;es</span></h4>
+<p><span id="New_Python_API"></span>
+</p>
+<h4><span class="mw-headline" id="Nouvelles_API_en_Python">Nouvelles API en Python</span></h4>
 <h2><span class="mw-headline" id="Start">Start</span></h2>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Addon_Manager">Addon Manager</span></h2>
 </div>
@@ -185,13 +183,13 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201905
+Cached time: 20260116201918
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.090 seconds
-Preprocessor visited node count: 250/1000000
+CPU time usage: 0.048 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
@@ -201,14 +199,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.641      1 -total
- 62.16%    7.236      2 Template:Message
- 28.71%    3.342      1 Template:FileName
- 21.07%    2.453      1 Template:VeryImportantMessage
- 11.35%    1.321      1 Template:TOCright
+100.00%    5.647      1 -total
+ 49.57%    2.799      2 Template:Message
+ 25.64%    1.448      1 Template:VeryImportantMessage
+ 20.35%    1.149      1 Template:TOCright
+ 18.73%    1.058      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201904 and revision id 1739246. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201918 and revision id 1739252. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
